--- a/_site.yml
+++ b/_site.yml
@@ -10,6 +10,10 @@ navbar:
     - text: "About"
       href: about.html
   left:
+    - text: "In-class Exercise"
+      menu:
+      - text: "In-class Exercise 1"
+        href: Inclass_Ex/In-class_Ex01/In-class_Ex01.html
     - text: "Take-home Exercise"
       menu:
       - text: "Take-home Exercise 1"
