--- a/_site.yml
+++ b/_site.yml
@@ -14,6 +14,8 @@ navbar:
       menu:
       - text: "In-class Exercise 1"
         href: Inclass_Ex/In-class_Ex01/In-class_Ex01.html
+      - text: "In-class Exercise 2"
+        href: Inclass_Ex/In-class_Ex02/In-class_Ex02.html
     - text: "Take-home Exercise"
       menu:
       - text: "Take-home Exercise 1"
