--- a/_site.yml
+++ b/_site.yml
@@ -19,11 +19,12 @@ navbar:
     - text: "Take-home Exercise"
       menu:
       - text: "Take-home Exercise 1"
-        href: TH_Ex/TH_Ex01/TH_Ex01.html
+        href: TH_Ex/TH_Ex01/Take-home_EX01.html 
     - text: "DataViz Makeover"
       menu:
       - text: "DataViz 1"
         href: DataViz1.html
       - text: "DataViz 2"
         href: DataViz2.html
+  search: true
 output: distill::distill_article
