--- a/_site.yml
+++ b/_site.yml
@@ -10,16 +10,12 @@ navbar:
     - text: "About"
       href: about.html
   left:
-    - text: "In-class Exercise"
-      menu:
-      - text: "In-class Exercise 1"
-        href: Inclass_Ex/In-class_Ex01/In-class_Ex01.html
-      - text: "In-class Exercise 2"
-        href: Inclass_Ex/In-class_Ex02/In-class_Ex02.html
     - text: "Take-home Exercise"
       menu:
       - text: "Take-home Exercise 1"
         href: TH_Ex/TH_Ex01/Take-home_EX01.html 
+      - text: "Take-home Exercise 2"
+        href: TH_Ex/TH_Ex02/Take-home_EX02.html 
     - text: "DataViz Makeover"
       menu:
       - text: "DataViz 1"
