--- a/_site.yml
+++ b/_site.yml
@@ -17,7 +17,9 @@ navbar:
       - text: "Take-home Exercise 2"
         href: TH_Ex/TH_Ex02/Take-home_EX02.html
       - text: "Take-home Exercise 3"
-        href: TH_Ex/TH_Ex03/Take-home_EX03.html        
+        href: TH_Ex/TH_Ex03/Take-home_EX03.html    
+      - text: "Take-home Exercise 4"
+        href: TH_Ex/TH_Ex04/Take-home_EX04.html  
     - text: "DataViz Makeover"
       menu:
       - text: "DataViz 1"
